# hvpqedk

./: .gitignore  CMakeLists.txt  README.md  setup.py
exdata/: ampi  correlator_V1V1  correlator_V2V2  correlator_V3V3  lattice_spacing
hvpqedk/kernel/: kernel.c
hvpqedk/kernel/src/: kernel_wrapper.c  kernel_wrapper.h
py-src/: kernel.py  rratio.py
py-src/tests/: ktest.py  rrtest.py
src/: CMakeLists.txt  kernel.c  kernel.h  rratio.c  rratio.h
src/tests/: CMakeLists.txt  kernel_test.cc  test_values.txt
